some tweaks